  Version 3.26
  1. Fixed alternate stylesheet behavior so that it is insensitive to order of declarations.
  2. Patch from John Binns to allow users to provide a callback to CGI::Carp.

  Version 3.25
  1. Fixed the link to the Netscape frames page.
  2. Added ability to specify an alternate stylesheet.
  3. Add support for XForms POST submssion both as application/xml or as multipart/related

  Version 3.24
  1. In startform(), if request_uri() returns undef, then falls back
  to self_url(). This should rarely happen except when run outside of
  the CGI environment.
  2. image button alignment options were mistakenly being capitalized, causing xhtml validation to fail.

  Version 3.23
  1. Typo in upload() persisted, now fixed for real. Thanks to
  Emanuele Zeppieri for correct patch and regression test.

  Version 3.22
  1. Typo in upload() function broke uploads. Now fixed (CPAN bug 21126).

  Version 3.21
  1. Don't try to read data at all when POST > $POST_MAX.
  2. Fixed bug that caused $cgi->param('name',undef,'value') to unset param('name') entirely.
  3. Fixed bug in which upload() sometimes returns empty. (CPAN bug #12694).
  4. Incorporated patch from BURAK@cpan.org to support HTTPcookies (CPAN bug 21019).

  Version 3.20
  1. Patch from David Wheeler for CGI::Cookie->bake(). Uses mod_perl headers_out->add()
	rather than headers_out->set().
  2. Fixed problem identified by Andrei Voronkov in which start_form() output was screwed
	up when initial argument begins with a dash and subsequent arguments do not.
  3. Quashed uninitialized variable warnings coming from script_name(), url() and other
        functions that require access to the PATH_INFO environment variable.

  Version 3.19
  1. Added patch from Stephen Frost that allows one to suppress use of the temp file that is
	created during uploads.
  2. Fixed problem noted by Martin Foster in which regular expression meta-character terms
	in the path information were not quoted, causing URL parsing