@@ -1,6 +1,8 @@
   Version 3.26
   1. Fixed alternate stylesheet behavior so that it is insensitive to order of declarations.
   2. Patch from John Binns to allow users to provide a callback to CGI::Carp.
+  3. Added "~" as an unreserved character in escape().
+  4. Patch from Chris Fedde to prevent HTTP_HOST from inhibiting SERVER_PORT in url() generation.
 
   Version 3.25
   1. Fixed the link to the Netscape frames page.
